Create main menu and base html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
-
+  <main>
+    <h1>Welcome to <span class="app-title">PCS7Toolbox</span>!</h1>
+    <h2>Create or open a project to start...</h2>
+  </main>
 </body>
 
 </html>
