Add theme selection

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main>
     <h1>Welcome to <span class="app-title">PCS7Toolbox</span>!</h1>
-    <h2>Create or open a project to start...</h2>
+    <h2>Import something to start...</h2>
   </main>
 </body>
 
